--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -7,13 +7,29 @@ body {
   background-color: #022e43;
 }
 
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+.row {
+  margin: 0 -5px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /* Style the counter cards */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
   padding: 16px;
   text-align: center;
   background-color: #f1f1f1;
-  /* height: 200px; */
+  min-height: 200px;
   color: #022e43;
   margin: 10px;
 }
@@ -29,10 +45,26 @@ body {
 }
 
 .card img {
-  width: 100px;
+  width: 150px;
 }
 
 a.link_video {
   text-decoration: none;
   color: #222;
+}
+
+@media screen and (max-width: 900px) {
+  .column {
+    width: 50%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
 }
