--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,70 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #022e43;
-}
-
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
-}
-
 .row {
-  margin: 0 -5px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the counter cards */
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
-  padding: 16px;
-  text-align: center;
-  background-color: #f1f1f1;
-  min-height: 200px;
-  color: #022e43;
-  margin: 10px;
-}
-
-.card.card-primary {
-  background-color: #022e43;
-  color: #fff;
-  font-size: 16px;
-}
-
-.card p.titulo {
-  font-size: 14px;
-}
-
-.card img {
-  width: 150px;
-}
-
-a.link_video {
-  text-decoration: none;
-  color: #222;
-}
-
-@media screen and (max-width: 900px) {
-  .column {
-    width: 50%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
+  margin-bottom: 0;
 }
