--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2,19 +2,6 @@
   margin-bottom: 0;
 }
 
-/*  fontSize: */
-.xs {
-  font-size: 0.75rem;
-}
-.sm {
+.small-text {
   font-size: 0.875rem;
-}
-.base {
-  font-size: 1rem;
-}
-.lg {
-  font-size: 1.125rem;
-}
-.xl {
-  font-size: 1.25rem;
 }
